# real_estate

./: .env.example  .gitignore  README.md  SIMULATION.md  TODO.md  pyproject.toml
.claude/agents/: calendar.md
_remove/scripts/: collect_all.py  process_all.py
_remove/tests/: test_commute.py  test_spending_power.py  test_utils.py
config/: settings.py
dashboard/: app.py
dashboard/components/: chart_builder.py  filters.py  map_viewer.py
dashboard/pages/: 03_realestate.py  06_correlation.py  07_simulation.py  08_local_sim.py  09_sim_map.py  09_yeongdeungpo_sim.py
data/: collection_dates.json
data/geo/: bjd_hjd_mapping.json  seoul_dong.geojson
docs/: yeongdeungpo_simulation.md
scripts/: collect_all.py  collect_yeongdeungpo.py  collect_yuseong.py  compare_reality.py  detailed_movement.py  process_all.py  seed_geodata.py
src/analysis/: correlation.py  live_flow_analyzer.py  scoring.py  trend_analysis.py
src/collectors/: base_collector.py  building_collector.py  bus_collector.py  commercial_collector.py  household_collector.py  live_commercial_collector.py  live_population_collector.py  live_snapshot_collector.py  population_collector.py  realestate_collector.py  spending_collector.py  subscription_collector.py
src/models/: __init__.py
src/processors/: geo_processor.py  population_processor.py  realestate_processor.py
src/simulation/: agent_model.py  calibration.py  flow_model.py  foot_traffic.py  forecast.py  household_data_loader.py  (+6 more)
tests/: test_analysis.py  test_foot_traffic.py  test_household_simulation.py  test_live_flow.py  test_simulation.py
(+21 files in other folders)
