[project]
name = "real-estate-simulation"
version = "0.1.0"
description = "서울 상권 & 부동산 시뮬레이션"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "requests>=2.31",
    "geopandas>=0.14",
    "shapely>=2.0",
    "folium>=0.15",
    "streamlit>=1.30",
    "streamlit-folium>=0.17",
    "plotly>=5.18",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "mesa>=2.1",
    "prophet>=1.1",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "jupyter>=1.0",
    "ipykernel>=6.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "config*", "dashboard*"]
